[package]
name = "tesla_auth"
version = "0.9.0"
description = "Tesla token generator"
homepage = "https://github.com/adriankumpf/tesla_auth"
repository = "https://github.com/adriankumpf/tesla_auth"
keywords = ["tesla-api", "oauth2", "webview", "cli"]
categories = ["command-line-utilities"]
authors = ["Adrian Kumpf"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
log = "0.4.21"
muda = "0.13.5"
oauth2 = "4.4.2"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
simple_logger = { version = "5.0.0", default-features = false, features = ["stderr"] }
tao = { version = "0.28", default-features = false, features = [ "rwh_06" ] }
wry = { version = "0.41.0", features = ["devtools"] }

[build-dependencies]
static_vcruntime = "2.0.0"

[profile.release]
strip = "debuginfo"
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
